--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "webpack-cli": "^3.3.5"
   },
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
