--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "description": "Tailwind inspired set of CSS spacing utility classes",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "html-webpack-plugin": "^3.2.0"
+  },
   "devDependencies": {
+    "css-loader": "^3.0.0",
+    "extract-loader": "^3.1.0",
+    "file-loader": "^4.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
   },
