--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "file-loader": "^4.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
+    "purgecss-webpack-plugin": "^1.5.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.2",
